@@ -154,7 +154,7 @@ public class AltchaCaptchaRestController implements InitializingBean {
     public static String bytesToHex(byte[] bytes) {
         StringBuilder stringBuilder = new StringBuilder();
         for (byte b : bytes) {
-            stringBuilder.append(String.format("%02x", b));
+            stringBuilder.append("%02x".formatted(b));
         }
         return stringBuilder.toString();
     }
